--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
+    "firebase": "^10.9.0",
+    "firebase-admin": "^11.11.1",
     "mongodb": "^5.7.0",
     "nodemon": "^2.0.22"
   }
