--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.9.0",
     "firebase-admin": "^11.11.1",
     "mongodb": "^5.7.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^2.0.22"
   }
 }
